[project]
name = "lina"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "mediapipe>=0.10.21",
  "opencv-python>=4.12.0.88",
  "numpy>=1.24.0",
  "scipy>=1.12.0",
  "tqdm>=4.66.0",
  "psutil>=5.9.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
